# mirinae

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  vcpkg.json
app/: CMakeLists.txt
app/android/Mirinapp/app/: build.gradle.kts
app/android/Mirinapp/gradle/wrapper/: gradle-wrapper.properties
app/linux/: main.cpp
app/sdl/: CMakeLists.txt  main.cpp
app/server/: CMakeLists.txt  main.cpp
app/windows/: CMakeLists.txt  dump.cpp  dump.hpp  main.cpp
lib/: CMakeLists.txt
lib/auxiliary/: CMakeLists.txt
lib/auxiliary/include/mirinae/lightweight/: create_info.hpp  debug_ren.hpp  image.hpp  include_spdlog.hpp  input_proc.hpp  konsts.hpp  lightweights.hpp  network.hpp  script.hpp  skin_anim.hpp  task.hpp  time.hpp  uinput.hpp
lib/auxiliary/include/mirinae/lua/: fwd.hpp  script.hpp  tools.hpp
lib/auxiliary/include/mirinae/math/: color.hpp  glm_fmt.hpp  include_glm.hpp  mamath.hpp
lib/auxiliary/include/mirinae/system/: imgui.hpp
lib/auxiliary/src/lightweight/: image.cpp  input_proc.cpp  network.cpp  script.cpp  skin_anim.cpp  task.cpp  text_data.cpp  time.cpp
lib/auxiliary/src/lua/: script.cpp  tools.cpp
lib/auxiliary/src/math/: color.cpp  mamath.cpp
lib/core/: CMakeLists.txt
lib/core/include/mirinae/: engine.hpp
lib/core/include/mirinae/actor/: transform.hpp
lib/core/include/mirinae/overlay/: iwidget.hpp  overlay.hpp  text.hpp
lib/core/include/mirinae/render/: mem_alloc.hpp  meshdata.hpp  overlay.hpp  pipeline.hpp  renderee.hpp  renderpass.hpp  uniform.hpp  vkcomposition.hpp  vkdevice.hpp  vkmajorplayers.hpp
lib/core/include/mirinae/scene/: scene.hpp  transform.hpp
lib/core/include/mirinae/util/: create_info.hpp  glm_fmt.hpp  image.hpp  include_glm.hpp  input_proc.hpp  konsts.hpp  mamath.hpp  script.hpp  skin_anim.hpp  text_data.hpp  time.hpp  uinput.hpp
lib/core/src/: engine.cpp
lib/core/src/mirinae/: engine.cpp
lib/core/src/mirinae/actor/: transform.cpp
lib/core/src/mirinae/overlay/: iwidget.cpp  overlay.cpp  text.cpp
lib/core/src/mirinae/render/: mem_alloc.cpp  meshdata.cpp  overlay.cpp  pipeline.cpp  renderee.cpp  renderpass.cpp  uniform.cpp  vkcomposition.cpp  vkdevice.cpp  vkmajorplayers.cpp
lib/core/src/mirinae/scene/: scene.cpp  transform.cpp
lib/core/src/mirinae/util/: image.cpp  input_proc.cpp  mamath.cpp  script.cpp  skin_anim.cpp  text_data.cpp  time.cpp
lib/cosmos/: CMakeLists.txt
lib/cosmos/include/mirinae/: cosmos.hpp
lib/cosmos/include/mirinae/cpnt/: atmos.hpp  camera.hpp  common.hpp  envmap.hpp  identifier.hpp  light.hpp  ocean.hpp  phys_body.hpp  ren_model.hpp  terrain.hpp  transform.hpp
lib/cosmos/include/mirinae/scene/: jolt_job_sys.hpp  phys_world.hpp  scene.hpp
lib/cosmos/include/mirinae/scene_2/: scene.hpp
lib/cosmos/src/: cosmos.cpp
lib/cosmos/src/cpnt/: atmos.cpp  atmos_entt.cpp  atmos_lua.cpp  camera.cpp  envmap.cpp  identifier.cpp  light.cpp  ocean.cpp  ren_model.cpp  terrain.cpp  transform.cpp
lib/cosmos/src/scene/: jolt_job_sys.cpp  phys_world.cpp  scene.cpp
lib/cosmos/src/scene_2/: scene.cpp
lib/engine/: CMakeLists.txt
lib/engine/include/mirinae/: engine.hpp  spawn_entt.hpp
lib/engine/src/: engine.cpp  imgui_widget.cpp  imgui_widget.hpp  spawn_entt.cpp
lib/platform/: CMakeLists.txt
lib/platform/include/mirinae/platform/: filesys.hpp  osio.hpp
lib/platform/src/: filesys.cpp
lib/vulkan/: CMakeLists.txt
lib/vulkan/base/: CMakeLists.txt
lib/vulkan/base/src/context/: camera.cpp
lib/vulkan/base/src/overlay/: iwidget.cpp  overlay.cpp  text.cpp
lib/vulkan/base/src/render/: cmdbuf.cpp  draw_set.cpp  enum_str.cpp  mem_alloc.cpp  mem_cinfo.cpp  meshdata.cpp  render_graph.cpp  renderee.cpp  renderpass.cpp  texture.cpp  uniform.cpp  vkcomposition.cpp  vkdebug.cpp  vkdevice.cpp  vkmajorplayers.cpp
lib/vulkan/base/src/renderee/: atmos.cpp  ren_actor_skinned.cpp  terrain.cpp
lib/vulkan/base/src/renderpass/: builder.cpp  common.cpp
lib/vulkan/include/mirinae/: renderer.hpp  vulkan_pch.h
lib/vulkan/include/mirinae/context/: camera.hpp
lib/vulkan/renderer/: CMakeLists.txt
lib/vulkan/renderer/src/: renderer.cpp  renderpasses.cpp  renderpasses.hpp
lib/vulkan/renpass/: CMakeLists.txt  compo.hpp
lib/vulkan/renpass/atmos/: CMakeLists.txt
lib/vulkan/renpass/bloom/: CMakeLists.txt
lib/vulkan/renpass/compo/: CMakeLists.txt  dlight.cpp  sky_atmos.cpp  vplight.cpp
lib/vulkan/renpass/envmap/: CMakeLists.txt  cubemap.cpp  diffuse.cpp  rp_brdf_lut.cpp  rp_diffuse.cpp  sky_atmos.cpp  specular.cpp
lib/vulkan/renpass/gbuf/: CMakeLists.txt  gbuf.cpp  gbuf.hpp
lib/vulkan/renpass/misc/: CMakeLists.txt  debug.cpp  skin_anim.cpp  skin_anim.hpp
lib/vulkan/renpass/ocean/: CMakeLists.txt  common.cpp  common.hpp  h0.cpp  hkt.cpp  ift.cpp  post_ift.cpp
lib/vulkan/renpass/shadow/: CMakeLists.txt  bundles.cpp  bundles.hpp  shadow.hpp  static.cpp  terrain.cpp
lib/vulkan/renpass/transp/: CMakeLists.txt  transp.hpp
lib/vulkan/src/: renderer.cpp
lib/vulkan/src/context/: camera.cpp  camera.hpp
lib/vulkan/src/overlay/: iwidget.cpp  iwidget.hpp  overlay.cpp  overlay.hpp  text.cpp  text.hpp
lib/vulkan/src/render/: cmdbuf.cpp  cmdbuf.hpp  draw_set.cpp  draw_set.hpp  enum_str.cpp  mem_alloc.cpp  mem_alloc.hpp  mem_cinfo.cpp  mem_cinfo.hpp  meshdata.cpp  render_graph.cpp  render_graph.hpp  renderee.cpp  renderee.hpp  renderpass.cpp  renderpass.hpp  texture.cpp  texture.hpp  uniform.cpp  uniform.hpp  vkcomposition.cpp  vkdebug.cpp  vkdebug.hpp  vkdevice.cpp  vkdevice.hpp  vkmajorplayers.cpp  vkmajorplayers.hpp
lib/vulkan/src/renderee/: atmos.cpp  atmos.hpp  ren_actor_skinned.cpp  ren_actor_skinned.hpp  terrain.cpp  terrain.hpp
lib/vulkan/src/renderpass/: builder.cpp  builder.hpp  common.cpp  common.hpp  compo.cpp  envmap.cpp  gbuf.cpp  ocean.cpp  shadow.cpp  transp.cpp
source/app/: CMakeLists.txt
source/app/android/Mirinapp/: settings.gradle.kts
source/app/windows/: CMakeLists.txt  main.cpp
source/lib/: CMakeLists.txt
source/lib/core/: CMakeLists.txt
source/lib/platform/: CMakeLists.txt
source/lib/platform/src/: filesys.cpp
test/: CMakeLists.txt  custom_format.cpp
(+506 files in other folders)
